--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "task",
-    "watch": "npm run build -- -w",
+    "watch": "builder-boy src/index.js dist/index.js -t node -r -w",
     "build": "builder-boy src/index.js dist/index.js -t node -r && npm run build-util",
     "build-util": "builder-boy src/util.js dist/util.js -t node -r"
   },
@@ -16,6 +16,7 @@
     "hub.js": "^0.2.9",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.1.3",
+    "stamp": "^4.0.2",
     "standard": "^8.1.0",
     "task": "latest"
   }
