--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@vigour-io/focus",
+  "name": "aim",
   "main": "dist/index.js",
+  "description": "Dependency free focus manager with built-in universal key navigation.",
   "scripts": {
     "dev": "task",
     "watch": "builder-boy src/index.js dist/index.js -t node -r -w",
