--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "task",
     "watch": "builder-boy src/index.js dist/index.js -t node -r -w",
     "build": "builder-boy src/index.js dist/index.js -t node -r && npm run build-util",
-    "build-util": "builder-boy src/util.js dist/util.js -t node -r"
+    "build-util": "builder-boy src/util.js dist/util.js -t node -r",
+    "publish-branch": "npm run version-commit && npm publish --tag $(git rev-parse --abbrev-ref HEAD | sed 's/\\//-/g')"
   },
   "files": [
     "dist"
